Bug 151260 - Crash in: SfxItemPool::SetDefaults(std::vector<SfxPoolItem *,std::allocator<SfxPoolItem *> > *)
Summary: Crash in: SfxItemPool::SetDefaults(std::vector<SfxPoolItem *,std::allocator<S...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.4.1.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.5.0 target:7.4.3 target:7.4.2
Keywords: bibisected, bisected, haveBacktrace, regression
: 151454 151602 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-01 20:01 UTC by rmkurzban
Modified: 2022-10-17 09:49 UTC (History)
5 users (show)

See Also:
Crash report or crash signature: ["SfxItemPool::SetDefaults(std::vector<SfxPoolItem *,std::allocator<SfxPoolItem *> > *)"]
Regression By:


Attachments
gdb bt (7.14 KB, text/plain)
2022-10-02 15:13 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rmkurzban 2022-10-01 20:01:28 UTC
This bug was filed from the crash reporting server and is br-3e94367b-89a3-420e-91e6-cb635d8dce00.
=========================================
Libre Office Base crashes every time, when use report builder then selecting menu Format --> Page...

This is happening on ever odb file.
Comment 1 Julien Nabet 2022-10-02 15:13:06 UTC
Created attachment 182787 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 Julien Nabet 2022-10-03 08:26:52 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/140894
Comment 3 Commit Notification 2022-10-03 13:57:23 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/07aa8138db9bbaf222f2b7cea12a9f7d0a8192d7

tdf#151260: crash in SfxItemPool::SetDefaults (reportdesign/ReportController)

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2022-10-03 16:53:36 UTC
Xisco cherry-picked the patch for 7.4 branch here:
https://gerrit.libreoffice.org/c/core/+/140886
it waits for some review.
Comment 5 Commit Notification 2022-10-04 09:21:42 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/24b641a026d6f99d8f287aabc0a830f37b25888d

tdf#151260: crash in SfxItemPool::SetDefaults (reportdesign/ReportController)

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2022-10-04 09:44:55 UTC
Verified in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 5d155e920334b6d2f03276eedf4471989dae9105
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: es-ES
Calc: threaded

@Julien, thanks for fixing this issue!!
Comment 7 Xisco Faulí 2022-10-04 09:45:30 UTC
for the record, this was a regression from

commit c4cf2e82e8d0aaef9b1daedc033d6edf647e5284
Author: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
Date:   Mon Jun 13 08:53:22 2022 +0200

    tdf#128150 Add OOXML import/export for "use background fill"
    
    and allow editing this fill property in area dlg
Comment 8 rmkurzban 2022-10-04 14:44:34 UTC
Julien, I down loaded 7.4.3 windows. Tried Report Format --> Page... and stiil crashed LibreOffice
Comment 9 Xisco Faulí 2022-10-04 14:48:33 UTC
(In reply to rmkurzban from comment #8)
> Julien, I down loaded 7.4.3 windows. Tried Report Format --> Page... and
> stiil crashed LibreOffice

Share information from help - about LibreOffice please
Comment 10 Julien Nabet 2022-10-04 19:40:39 UTC
(In reply to rmkurzban from comment #8)
> Julien, I down loaded 7.4.3 windows. Tried Report Format --> Page... and
> stiil crashed LibreOffice

I gave a new try with master sources updated today + gen rendering (to be a bit closer to Windows) but didn't reproduce the crash.

I suppose you downloaded from https://dev-builds.libreoffice.org/daily/libreoffice-7-4/Win-x86_64@tb77-TDF/current/ since 
https://www.libreoffice.org/download/download-libreoffice/ proposes only 7.4.1

The patch on 7.4 branch was just today, I'd be quite astonished you used a daily build from 7.4 which has already the patch.

Now perhaps it became a Windows only bug. I'll give it a try but on my Windows laptop, it takes more time to build.
Comment 11 Julien Nabet 2022-10-05 19:48:43 UTC
On Windows 10 with master sources updated today + brand new odb (embedded HSQLDB) file, I don't reproduce the crash.
Comment 12 rmkurzban 2022-10-05 21:30:29 UTC
The build I download was LibreOfficeDev_7.4.3.0.0_Win_x64.msi 2022-Oct-05 09:54.

This worked okay with a new Database and also an existing one. Is there any thing I need to do (more testing)?

Will I be notified when this fix is a production build?

Thank you for your help.
Richard
Comment 13 Commit Notification 2022-10-06 06:42:14 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-2":

https://git.libreoffice.org/core/commit/a350ecc0f048199ddbcbd78d7fc32aac279cdbdc

tdf#151260: crash in SfxItemPool::SetDefaults (reportdesign/ReportController)

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Julien Nabet 2022-10-06 17:11:57 UTC
(In reply to rmkurzban from comment #12)
> The build I download was LibreOfficeDev_7.4.3.0.0_Win_x64.msi 2022-Oct-05
> 09:54.
> 
> This worked okay with a new Database and also an existing one. Is there any
> thing I need to do (more testing)?
> 
> Will I be notified when this fix is a production build?
You won't have a notification but you can check https://www.libreoffice.org/download/download-libreoffice/ when it'll advertise 7.4.2.
According to https://wiki.documentfoundation.org/ReleasePlan/7.4, it should be between 10 and 16 October.
Comment 15 rmkurzban 2022-10-06 18:01:45 UTC
That you for the fast response on fixing this issue.
Comment 16 Xisco Faulí 2022-10-10 15:41:44 UTC
*** Bug 151454 has been marked as a duplicate of this bug. ***
Comment 17 Commit Notification 2022-10-10 15:42:40 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5e29b084eb0bfcfbc82622df5c445a6148531989

tdf#151260, tdf#84930: Use static_assert to check contiguous item ids

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Julien Nabet 2022-10-17 09:49:47 UTC
*** Bug 151602 has been marked as a duplicate of this bug. ***