tdf#151260: crash in SfxItemPool::SetDefaults (reportdesign/ReportController)

+ deal with the case when there's no XATTR_FILLUSESLIDEBACKGROUND (like here)

Change-Id: I2a4cccc80eea69aa88d45b3485d7f6d4448816e2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140894
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>