cui/source/tabpages/tparea.cxx
@@ -238,8 +238,11 @@ DeactivateRC SvxAreaTabPage::DeactivatePage( SfxItemSet* _pSet )
             {
                 XFillStyleItem aStyleItem( drawing::FillStyle_NONE );
                 _pSet->Put( aStyleItem );
-                XFillUseSlideBackgroundItem aFillBgItem( false );
-                _pSet->Put( aFillBgItem );
+                if (_pSet->HasItem(XATTR_FILLUSESLIDEBACKGROUND))
+                {
+                    XFillUseSlideBackgroundItem aFillBgItem( false );
+                    _pSet->Put( aFillBgItem );
+                }
             }
             break;
         }
